--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-social-icons": "^5.15.0",
+    "react-toastify": "^9.1.1",
     "tableau-api": "^2.2.3",
     "web-vitals": "^2.1.4"
   },
