--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.6.0",
     "react-pdf": "^6.2.1",
     "react-router-dom": "^6.4.2",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-social-icons": "^5.15.0",
     "react-toastify": "^9.1.1",
