--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "animate.css": "^4.1.1",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.2",
+    "emoji-picker-react": "^4.4.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
